# parallel-programming

./: .envrc  .gitignore  flake.nix  justfile
.github/workflows/: check.yaml
nix/: lints.nix  persystem.nix  treefmt.nix
projects/01-introduction/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
projects/01-introduction/jobs/: hello-world.sh  reduce.sh  roundabout.sh
projects/01-introduction/src/: Makefile.am  Makefile.in  hello.c  reduce.c  roundabout.c
projects/02-send-recv/: Makefile.am  configure.ac
projects/02-send-recv/scripts/: measure.sh
projects/02-send-recv/src/: bench.cpp
projects/03-sort/: .gitignore  Makefile.am  configure.ac
projects/03-sort/scripts/: measure.sh  plot.sh
projects/03-sort/src/: sort.cpp
projects/04-transfer-equation/: CMakeLists.txt
projects/04-transfer-equation/scripts/: measure.sh  plot.sh
projects/04-transfer-equation/src/: transfer-solver.cc
projects/05-intro-threads/: CMakeLists.txt
projects/05-intro-threads/src/: circular.cc  concurrentqueue.h  hello-thread.cc  integration.cc  sum.cc
projects/06-openmp/: CMakeLists.txt
projects/06-openmp/src/: hello-openmp.cc  reduction.cc  serialize.cc
projects/07-openmp-eratosthenes/: CMakeLists.txt
projects/07-openmp-eratosthenes/src/: main.cc
